fix misaligned checkbox In safari, on both ios and mac grid does defaults align-content: start whereas on chrome it is centered.  Added align-content: center to fix.

--- a/src/stylesheets/components/_checkbox-card.scss
+++ b/src/stylesheets/components/_checkbox-card.scss
@@ -20,6 +20,7 @@
   position: relative;
   display: grid;
   justify-content: start;
+  align-content: center;
   width: 100%;
   height: 62px;
 }
